@@ -17,6 +17,7 @@ tglob
 thkp
 tinv
 tkey
+tmacro
 tput
 tring
 trpmio
